<resources>
    <string name="app_name">Cálculos Trabalhistas</string>
    <string name="fgts">CALCULAR FGTS</string>
    <string name="seguroDesemprego">CALCULAR SEGURO DESEMPREGO</string>
    <string name="ferias">CALCULAR FÉRIAS</string>
    <string name="recisao">CALCULAR RECISÃO</string>
    <string name="inss">CALCULAR INSS</string>
    <string name="salarioLiquido">CALCULAR SALÁRIO LÍQUIDO</string>
    <string name="adicionalNoturno">CALCULAR ADICIONAL NOTURNO</string>
    <string name="horaExtra">CALCULAR HORA EXTRA</string>
    <string name="salarioHora">CALCULAR SALÁRIO POR HORA</string>
    <string name="salarioBruto">Salário bruto</string>
    <string name="x">X</string>
    <string name="mesesTrabalhados">Número de meses trabalhados</string>
    <string name="calcular">CALCULAR</string>
    <string name="fonte">FONTE</string>
    <string name="recebeuSeguradoDesemprego">Solicitação:</string>
    <string name="swRecebeuSeguro">Não</string>
    <string name="AntepenultimoSalario">Antepenúltimo Salário:</string>
    <string name="placeholderSalario">0.00</string>
    <string name="penultimoSalario">Penúltimo Salário:</string>
    <string name="ultimoSalario">Último Salário:</string>
    <string name="mesesTrabalhadosb">Meses Trabalhados:</string>
    <string name="calcularValor">Calcular Valor</string>
    <string name="fonteBotao">Fonte</string>
    <string name="valorReceber">Valor a Receber:</string>
    <string name="numeroParcelas">Parcelas:</string>
    <string name="primeira">Primeira</string>
    <string name="segunda">Segunda</string>
    <string name="terceira">Terceira</string>
    <string name="avisoSeguroDesemprego">Sem direito! Verifique a solicitação e a quantidade de meses trabalhados.</string>
    <string name="salarioBruto2">Salário bruto:</string>
    <string name="horasExtrasAno">Horas extras no ano:</string>
</resources>
